Feature: connect FoodItem creation with USDA nutrition search in backend + Updated FoodItemRequest DTO with custom validation constraint