@@ -9,23 +9,21 @@ import se.sofiekl.macromealplanner.repository.FoodItemRepository;
 import se.sofiekl.macromealplanner.repository.MealRepository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class DayMapper {
-    private final MealRepository mealRepository;
     private final MealMapper mealMapper;
 
-    public DayMapper(MealRepository mealRepository, MealMapper mealMapper) {
-        this.mealRepository = mealRepository;
+    public DayMapper(MealMapper mealMapper) {
         this.mealMapper = mealMapper;
     }
 
     public DayResponseDTO toDTO(Day day) {
-        List<MealSummaryDTO> mealSummaries = mealRepository.findAllByUserIdAndDay_DateBetween(
-                day.getUser().getId(), day.getDate(), day.getDate())
-                .stream()
-                .map(mealMapper::toMealSummaryDTO)
-                .toList();
+        List<MealSummaryDTO> mealSummaries = day.getMeals()
+                .stream().map(mealMapper::toMealSummaryDTO)
+                        .collect(Collectors.toList());
+
         return new DayResponseDTO(
                 day.getId(),
                 day.getDate(),
